@@ -55,10 +55,9 @@ userid=myname&password=mypassword
 # http://curl.haxx.se/rfc/cookie_spec.html
 # This file was generated by libcurl! Edit at your own risk.
 
-127.0.0.1	FALSE	/we/want	FALSE	0	foobar	name
+127.0.0.1	FALSE	/we/want/	FALSE	0	foobar	name
 .127.0.0.1	TRUE	"/silly/"	FALSE	0	mismatch	this
 .0.0.1	TRUE	/	FALSE	0	partmatch	present
-
 </file>
 </verify>
 </testcase>
